# ql-measurements

./: .gitignore  01-LIBIDS.py  02-LIPANCORA.py  03-LIRACOS.py  04-LEBEAR.py  04-LIMP.py  05-LEBEAR.py  CITATION.cff  README.md  atualiza-calendario.py  bootstrap year calendar.html  colors-lidar  config.yaml  pyproject.toml  ql-measurement-calendar.html  requirements.txt  update-site.py
2024/: 20240221saam_level1_rcs_Gallery.html  20240222saam_level1_rcs_Gallery.html  20240223saam_level1_rcs_Gallery.html  20240315sant_level1_rcs_Gallery.html  20240401sant_level1_rcs_Gallery.html  20240403sant_level1_rcs_Gallery.html  20240404sant_level1_rcs_Gallery.html  20240404sapm_level1_rcs_Gallery.html  20240419saam_level1_rcs_Gallery.html  20240422sant_level1_rcs_Gallery.html  20240507saam_level1_rcs_Gallery.html  20240507sant_level1_rcs_Gallery.html  20240508sant_level1_rcs_Gallery.html  20240522saam_level1_rcs_Gallery.html  20240611sant_level1_rcs_Gallery.html  20240806saam_level1_rcs_Gallery.html  20240812saam_level1_rcs_Gallery.html  20240815saam_level1_rcs_Gallery.html  20240815sant_level1_rcs_Gallery.html  20240819saam_level1_rcs_Gallery.html  20240819sant_level1_rcs_Gallery.html  20240820saam_level1_rcs_Gallery.html  20240821saam_level1_rcs_Gallery.html  20240821sant_level1_rcs_Gallery.html  20240823saam_level1_rcs_Gallery.html  20240827saam_level1_rcs_Gallery.html  20240827sant_level1_rcs_Gallery.html  20240828saam_level1_rcs_Gallery.html  20240902saam_level1_rcs_Gallery.html  20240902sant_level1_rcs_Gallery.html  20240903sant_level1_rcs_Gallery.html  (+38 more)
functions/: core_io.py  (+2 more)
(+925 files in other folders)
